v1.9.8:
 - BUG FIX: fix panic when build socks5 UDP header with domain address
 - BUG FIX: fix possible panic when reading H2 stream
 - BUG FIX: register correct read event when reading cert-generate / ip-locate / route-query response
 - Feature: allow to write event logs to stdout
 - Feature: add stream detour support to audit
 - Feature: only enable anonymous user if ingress network ACL matched
 - Optimization: check user ingress network ACL early and reply auth failed if denied
 - Optimization: ignore more clean connection close error in interception

v1.9.7:
 - BUG FIX: clean old redis fetch job in time on reloading ProxyFloat escaper
 - BUG FIX: clean old dynamic user fetch job in time on user group reloading
 - Feature: support ICAP audition for IMAP APPEND
 - Feature: support TLS redis server
 - Feature: allow to dump client side TlS decrypted stream via `client-side` dump config option
 - Removed: remove redis cluster support, a redis proxy should be used in front of the redis cluster

v1.9.6:
 - BUG FIX: fix lifetime of worker threads
 - BUG FIX: fix selection of final escaper for http forward tasks
 - Feature: allow to set global speed limits at user level

v1.9.5:
 - BUG FIX: close the old process when hot restart

v1.9.4:
 - BUG FIX: fix ALPN filter in tls interception
 - BUG FIX: update to tokio 1.38.1
 - Feature: allow to block IMAP connection
 - Feature: allow to disable session ticket and session cache in TLS server config
 - Feature: use aw-ls as rustls provider when build with vendored-aws-lc feature
 - Optimization: try quick TCP ACK after accept handshake for resumed TLS sessions

v1.9.3:
 - BUG FIX: fix deb package install rule
 - BUG FIX: fix match rules in route_geoip escaper
 - Optimization: only query http forward capabilities when needed in http_proxy server

v1.9.2:
 - BUG FIX: fix ICAP handle of H2 request with small body
 - Feature: add SMTP interception support
 - Feature: support ICAP reqmod for SMTP DATA message