@@ -43,4 +43,51 @@ Example:
 
   tshark -i udpdump -o extcap.udpdump.payload:exported_pdu -o extcap.udpdump.port:5555 <...>
 
+Packet Layout
+-------------
 
+You will see two exported_pdu frame for each packet in the saved capture file.
+
+The first frame is added by `udpdump`, it will contain:
+
+- UDP Socket Address of g3proxy
+
+  The src ip may be in tag `EXP_PDU_TAG_IPV4_SRC` or `EXP_PDU_TAG_IPV6_SRC`.
+  The src port will be in tag `EXP_PDU_TAG_SRC_PORT`.
+
+- UDP Socket Address of udpdump
+
+  The dst ip may be in tag `EXP_PDU_TAG_IPV4_DST` or `EXP_PDU_TAG_IPV6_DST`.
+  The dst port will be in tag `EXP_PDU_TAG_DST_PORT`.
+
+The second frame is generated by `g3proxy`, it will contain:
+
+- Socket Address
+
+  The address used here will include:
+
+    * client socket address for the client connection
+    * remote socket address for the remote connection
+
+  The src ip may be in tag `EXP_PDU_TAG_IPV4_SRC` or `EXP_PDU_TAG_IPV6_SRC`.
+  The src port will be in tag `EXP_PDU_TAG_SRC_PORT`.
+  The dst ip may be in tag `EXP_PDU_TAG_IPV4_DST` or `EXP_PDU_TAG_IPV6_DST`.
+  The dst port will be in tag `EXP_PDU_TAG_DST_PORT`.
+
+- Port Type
+
+  It will be in tag `EXP_PDU_TAG_PORT_TYPE`,  and the value will be EXP_PDU_PT_TCP for stream based connections.
+
+- Stream ID
+
+  It will be in tag `EXP_PDU_TAG_TCP_STREAM_ID`, and will only be set for stream based connections.
+
+- Match Uint
+
+  It will be in tag `EXP_PDU_TAG_MATCH_UINT`, and currently the value should be the same as the remote address port.
+
+To identify an unique stream, you need to use all of the following values:
+
+- src ip + src port in the first frame
+- src ip + src port + dst ip + dst port + port type in the second frame
+- stream id in the second frame
