@@ -287,7 +287,7 @@ where
             if stream_dumper.client_side() {
                 let (clt_r, clt_w) = stream_dumper.wrap_client_io(
                     self.ctx.task_notes.client_addr,
-                    self.ctx.task_notes.server_addr,
+                    self.ctx.task_notes.remote_addr,
                     dissector_hint,
                     clt_r,
                     clt_w,
@@ -296,7 +296,7 @@ where
             } else {
                 let (ups_r, ups_w) = stream_dumper.wrap_remote_io(
                     self.ctx.task_notes.client_addr,
-                    self.ctx.task_notes.server_addr,
+                    self.ctx.task_notes.remote_addr,
                     dissector_hint,
                     ups_r,
                     ups_w,
