@@ -162,12 +162,18 @@ impl TlsStreamTask {
         let (clt_r, clt_w) = self.split_clt(clt_stream);
 
         if let Some(audit_handle) = self.ctx.audit_handle.take() {
+            let Some(remote_addr) = self.tcp_notes.next else {
+                return Err(ServerTaskError::InternalServerError(
+                    "no remote peer address set for connected socket",
+                ));
+            };
             let ctx = StreamInspectContext::new(
                 audit_handle,
                 self.ctx.server_config.clone(),
                 self.ctx.server_stats.clone(),
                 self.ctx.server_quit_policy.clone(),
                 &self.task_notes,
+                remote_addr,
             );
             crate::inspect::stream::transit_with_inspection(
                 clt_r,
